[tool.poetry]
name = "os-elm"
version = "0.1.0"
description = ""
authors = ["naumenko <firnen76@gmail.com>"]
readme = "README.md"
packages = [{include = "os_elm"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
sklearn = "^0.0.post1"
matplotlib = "^3.7.1"
pandas = "^2.0.0"
ipykernel = "^6.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
